--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         </activity>
         <activity android:name=".HA_message" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar" android:windowSoftInputMode="adjustNothing"></activity>
         <activity android:name=".HA_monitor" android:screenOrientation="landscape"/>
-
+        <activity android:name=".HA_appCnt" android:screenOrientation="landscape" />
 
     </application>
 </manifest>
