Login 키패드 수정/ 메세지 EditText 카톡처럼 올라가게 변경

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".HA_message" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar" android:windowSoftInputMode="adjustNothing"></activity>
+
+        <!--android:windowSoftInputMode="adjustNothing"-->
+        <activity android:name=".HA_message" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar"  />
         <activity android:name=".HA_monitor" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar" />
         <activity android:name=".HA_appCnt" android:screenOrientation="landscape" android:theme="@android:style/Theme.Dialog" />
 
