전체 메세지 보내기 기능 최종완료

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,9 +16,9 @@
         </activity>
 
         <!--android:windowSoftInputMode="adjustNothing"-->
-        <activity android:name=".HA_message" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar"  />
         <activity android:name=".HA_monitor" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar" />
         <activity android:name=".HA_appCnt" android:screenOrientation="landscape" android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".HA_send_all" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar"/>
 
     </application>
 </manifest>
